# zlib

./: CMakeLists.txt  LICENSE  README.md  algorithm.md
.github/: FUNDING.yml
.github/workflows/: CI.yml
include/: desktop.ini
src/: maketree.c  minigzip.c
